plugins/opa/examples-v2/nginx-cve-2023-5044/policy.failure.yaml
# This manifest is used to test the accompanying OPA policy.
# Applying this in your cluster could create a security vulnerability!
# This deployment is for policy testing/validation only!
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  # This annotation will cause the policy to fail
    nginx.ingress.kubernetes.io/permanent-redirect: "www.yahoo.com"
  name: ingress-object
  namespace: staging
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: tofu.yahoo.com
    http:
      paths:
      - backend:
          service:
            name: tofu-svc
            port:
              number: 3000
        path: /
        pathType: Exact
