plugins/opa/examples-v2/nginx-cve-2023-5044/policy.success.yaml
# This manifest is used to test the accompanying OPA policy.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
# Lack of a permanent redirect annotation will cause this policy to succeed
  name: ingress-object
  namespace: staging
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: tofu.yahoo.com
    http:
      paths:
      - backend:
          service:
            name: tofu-svc
            port:
              number: 3000
        path: /
        pathType: Exact
